# Contest

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTONOMOUS_IMPROVEMENT_LOG.md  CLAUDE.md  Design.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  claude.yml
.streamlit/: secrets.toml.template
app/: main.py
app/components/: cards.py  kakao_map.py  map.py  sidebar.py  welcome_modal.py
app/services/: data.py  matching.py  roi.py
data/: 데이터사용개요.md
data/gold/: baseline_demand.parquet  epiphany_metrics.parquet  forecast_monthly.parquet  match_flows.parquet  match_solution.parquet
data/silver/: crop_coefficients.parquet  demand_parks.parquet  demand_roads.parquet  drought_index.parquet  suppliers.parquet  supply_history.parquet  water_quality_grades.parquet  weather_monthly.parquet
docs/: Database.md  Design.md  PRD.md  TEST_CASE.md  TSD.md
etl/: paths.py  pipelines.py  sample_data.py
etl/extract/: kma_asos.py  seoul_data.py
etl/transform/: demand.py  normalize.py  suppliers.py
models/: aggregate.py
models/forecast/: baseline.py  eval.py  lightgbm.py
models/matching/: geo.py  greedy.py  ilp.py
plans/: plan.md  프롬프트.md
references/: source.md
tests/: test_app.py  test_bootstrap.py  test_etl.py  test_extract.py  test_matching.py  test_models.py  test_roi.py  test_sidebar_search.py  test_welcome_modal.py
